no longer read file name for author and title